...
import com.davidread.habittracker.login.model.LoginTextFieldViewState
import com.davidread.habittracker.login.model.LoginViewEffect
import com.davidread.habittracker.login.model.LoginViewIntent
import com.davidread.habittracker.login.model.LoginViewState
import com.davidread.habittracker.login.viewmodel.LoginViewModel

internal const val LOGIN_BUTTON_TEST_TAG = "login_button"
internal const val SIGN_UP_LINK_TEST_TAG = "sign_up_link"
internal const val CLEAR_EMAIL_BUTTON_TEST_TAG = "clear_email_button"
internal const val TOGGLE_PASSWORD_VISIBILITY_BUTTON_TEST_TAG = "toggle_password_visibility_button"
private const val SIGN_UP_LINK_ANNOTATION_TAG = "sign_up"

@Composable
...
