...
import com.davidread.habittracker.list.viewmodel.HabitListViewModel
import kotlinx.coroutines.flow.flowOf
import kotlinx.coroutines.launch
import kotlin.math.roundToInt
import androidx.compose.ui.graphics.Color as ComposeColor

internal const val CLEAR_HABIT_NAME_BUTTON_TEST_TAG = "clear_habit_name_button"

@Composable
fun HabitListScreen(
    modifier: Modifier = Modifier,
    viewModel: HabitListViewModel = hiltViewModel(),
    onNavigateToSettingsScreen: () -> Unit = {},
...
